[tool.poetry]
name = "rebalance_lnd"
version = "2.2"
description = "A tool which pairs Pandas to LND Lightning Network Data for Data Science"
readme = "README.md"
authors = ["C-Otto"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1"
yachalk = "0.1.2"
lnd-grpc-client = "0.3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rebalance_lnd = "rebalance_lnd:rebalance"